Changed link for Yrsa

--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@ articles:
     link: http://github.com/rosettatype/eczar
     description: Latin + Devanagari type family with 5 weights
   - title: Yrsa (ongoing)
-    link: http://rosettatype.github.io/yrsa
+    link: http://github.rosettatype.com/yrsa
     description: Latin + Gujarati type family with 5 weights
   - title: repos
     link: http://github.com/rosettatype/repos
