--- a/_config.yml
+++ b/_config.yml
@@ -28,4 +28,4 @@ articles:
     description: Quick and dirty Python script to track multiple Git repositories and easily fetch updates
   - title: post-production scripts
     link: https://github.com/rosettatype/post-production-scripts
-    description: Some of our font post-production tools
+    description: Publicly available command-line tools used for post-production of Rosetta fonts
