Switch to https
This change resolves the “Connection is not secure” issue.

--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 # Setup
 title: Rosetta open-source
 description: Open-source projects by Rosetta
-url: http://github.rosettatype.com
+url: https://github.rosettatype.com
 baseurl: ""
 
 # About/contact
@@ -18,13 +18,13 @@ markdown: kramdown
 # Articles showed on homepage
 articles:
   - title: Eczar
-    link: http://github.com/rosettatype/eczar
+    link: https://github.com/rosettatype/eczar
     description: Latin + Devanagari type family with 5 weights
   - title: Yrsa & Rasa
-    link: http://github.rosettatype.com/yrsa-rasa
+    link: https://github.rosettatype.com/yrsa-rasa
     description: Latin & Gujarati type families with 5 weights
   - title: repos
-    link: http://github.com/rosettatype/repos
+    link: https://github.com/rosettatype/repos
     description: Quick and dirty Python script to track multiple Git repositories and easily fetch updates
   - title: post-production scripts
     link: https://github.com/rosettatype/post-production-scripts
