--- a/_config.yml
+++ b/_config.yml
@@ -15,6 +15,11 @@ author:
 # Build settings
 markdown: kramdown
 
+# Sass compiling
+sass:
+  sass_dir: assets/css
+  style: compressed
+
 # Articles showed on homepage
 articles:
   - title: Hyperglot
