--- a/_config.yml
+++ b/_config.yml
@@ -33,7 +33,7 @@ articles:
   - title: Design Regression
     link: https://designregression.com
     description: Design Regression is a journalette (mini journal) publishing texts that are about design for reading and reading-related research. It aims for the hard-to-get blend of approachability with seriousness and relevance to practice.
-  - title: All types of “a” with brief descriptions from the website.
+  - title: All types of “a”
     link: https://all-types-of-a.rosettatype.com
     description: An inclusive collection of peculiar shapes of the Latin lowercase letter ‘a’ (Unicode U+0061) has been selected to illustrate that an essential form of ‘a’ (if it exists) must be quite complex.
   - title: Eczar
